--- a/african-am.html
+++ b/african-am.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -58,7 +58,7 @@
             </div>
 
             <div class="col-sm-6" id="charts" </div>
-                <img src="Images/White_thirteen_year_graph.png" alt="Whites line graph, 2010-2029">
+                <img src="Images/white_thirteen_year_graph.png" alt="Whites line graph, 2010-2029">
             </div>
         </div>
 
