Add web site link to home page

--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
 
                 <p>Some notes about the data: Predictions for change in representation over the next ten years are based on the average annual change in the past ten. However, BLS has reported representation of whites only since 2017. The average annual
                     change for that group, therefore, is based on just three years of data and likely to be less reliable than that of other categories.</p>
+
+                <br>
+                <h6>To find out how we can help you analyze your workforce to identify snags in your pipeline and data-based strategies for improving diversity and inclusion in your organization, visit
+                    <a class="external_link" href=https://hr-at-the-ready.com/people-analytics>HR-at-the-Ready's People Analytics page</a>
+                </h6>
             </div>
             <div class=col-md-2 " id="page_links ">
                 <br><br><br><br><h5><a class="link " href="overview.html ">Overview</a> of data and predictions, 2010 - 2029</h5>
