correction to adv ratio 2019 chart et al

--- a/latinx.html
+++ b/latinx.html
@@ -45,7 +45,7 @@
                 <h3>Latinx workers post largest proportional gains of all demographic groups in professional and managerial jobs</h3>
                 <br>
                 <p>While their representation in the professional and management ranks, compared to their share of the total workforce, lagged other groups in 2010, Latinx workers have seen greater gains. By 2029 their advancement ratios will have increased
-                    by 15 and 18 points, respectively, in those categories, although even their levels will remain well below parity. Unlike African-Americans and Asians, however, Latinx are not expected to gain much ground among CEOs. </p>
+                    by 15 and 18 points, respectively, in those categories, although, even then, their levels will remain well below parity. Unlike African-Americans and Asians, however, Latinx are not expected to gain much ground among CEOs. </p>
                 <p><em>Note that the future trend for whites is based on only three years of actual previous data and may be less reliable than forecasts for other groups.</em></p>
             </div>
         </div>
